--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -1,4 +1,8 @@
 services:
+  lox24\api_client\api\Lox24Api:
+    class: '@lox24\api_client\api\Lox24Api'
+    arguments:
+      $client: '@lox24.api_client.client'
   lox24.api.client:
     class: '@lox24\api_client\Client'
   arguments:
