--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -11,8 +11,7 @@ services:
       $requestFactory: '@nyholm.psr7.psr17_factory'
       $config: '@lox24.api.client_config'
 
-  lox24.api.client:
-    class: lox24\api_client\api\Lox24Api
+  lox24\api_client\api\Lox24Api:
     arguments:
       $client: '@lox24.api.client_http'
 
