--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "lox24eu/lox24_api_client_bundle",
     "type": "symfony-bundle",
     "description": "A simple Symfony bundle for the official sdk provided by LOX24.",
+    "version": "0.2",
     "keywords": [
         "LOX24", "SMS", "API", "Symfony", "Bundle"
     ],
@@ -12,7 +13,7 @@
     "require": {
         "php": ">=8.2",
         "symfony/framework-bundle": "~7.0",
-        "lox24eu/lox24_api_client": "^0.1"
+        "lox24eu/lox24_api_client": "~0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~11.0",
