--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,11 @@
 {
     "bundles": {
-        "lox24\\bundle\\api_client\\LOX24Bundle": ["all"]
+        "lox24\\bundle\\api_client\\LOX24Bundle": [
+            "all"
+        ]
     },
-    "copy-from-package": {
-        "config/": "%CONFIG_DIR%/"
+    "copy-from-recipe": {
+        "recipe/": "%CONFIG_DIR%/"
     },
     "env": {
         "LOX24_API_TOKEN": "FILL LOX24 API TOKEN HERE"
